Update view of Searching and Learning Word

--- a/tudienchuyennganh/index.html
+++ b/tudienchuyennganh/index.html
@@ -15,6 +15,9 @@
   <!-- la ban widget -->
  <script src="https://stc-laban.zdn.vn/dictionary/js/plugin/lbdictplugin.frame.min.js"></script>  <!-- Youlish widget -->
   <script async src="https://youglish.com/public/emb/widget.js" charset="utf-8"></script>
+  <!-- Speaking cdn -->
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=6QxcwyPk"></script>
+
 </body>
 
 </html>
