Revise login form with Google Button

--- a/tudienchuyennganh/index.html
+++ b/tudienchuyennganh/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Từ điển chuyên ngành Dược</title>
+  <title>Học tiếng anh</title>
 </head>
 
 <body>
@@ -13,10 +13,10 @@
   <script type="module" src="/src/main.js"></script>
 
   <!-- la ban widget -->
- <script src="https://stc-laban.zdn.vn/dictionary/js/plugin/lbdictplugin.frame.min.js"></script>  <!-- Youlish widget -->
-  <script async src="https://youglish.com/public/emb/widget.js" charset="utf-8"></script>
+ <script src="https://stc-laban.zdn.vn/dictionary/js/plugin/lbdictplugin.frame.min.js"></script>  
   <!-- Speaking cdn -->
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=6QxcwyPk"></script>
+
 
 </body>
 
